Attempting to add a database form input page, part 1

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
 			<p>The text you entered in the form above should appear below here!</p>
 			<div style='height:100px; display:inline-block; background-color:black; color:white'><%= username %></div>
 		<div style='float: right; width: 10%; height:100%'>
-			<p style='text-align: center; transform: rotate(90deg)'><a href="http://localhost:3000/viewAll">Click here to view the items database!</a></p>
+			<p style='text-align: center; transform: rotate(90deg)'><a href="/viewAll">Click here to view the items database!</a></p>
 		</div>
 	</body>
 </html>
