--- a/views/pages/addNewEntry.ejs
+++ b/views/pages/addNewEntry.ejs
@@ -14,7 +14,7 @@
 		<br>
 
 		<strong>Item Description</strong>: 
-		<input type="text" name="name" style="border:1px solid gray">
+		<input type="text" name="desc" style="border:1px solid gray">
 		<br>
 
 		<strong>Item Price</strong>: 
