Successfully interacted with the database! Good times.

--- a/views/pages/addNewEntry.ejs
+++ b/views/pages/addNewEntry.ejs
@@ -27,5 +27,7 @@
 
 		<input type="submit" value="Submit New Entry" style="border:2px solid black">
 		<br>
+		<br>
+		<p>Just added something and want to check whether it's there? Click <a href='/viewAll' style='text-decoration:none; color:orange'>here</a> to see an updated items list!</p>
 	</body>
 </html>
