--- a/views/pages/viewAll.ejs
+++ b/views/pages/viewAll.ejs
@@ -25,5 +25,8 @@
 			<% }) %> <!-- Code is done! -->
 			</tbody>
 		</table>
+		<br>
+		<br>
+		<p>Want to add a new item to the list? Click <a href='/addNewEntry' style='text-decoration:none;color:orange'>here</a>!</p>
 	</body>
 </html>
