Fixed error by changing db.run to db.get! Learning!

--- a/views/pages/editEntry.ejs
+++ b/views/pages/editEntry.ejs
@@ -25,5 +25,6 @@
 
 			<input type="submit" value="Submit New Entry" style="border:2px solid black">
 		</form>
+		<p>Click <a href='/viewAll' style='text-decoration:none; color:orange'>here</a> to go back to viewing all of the items!</p>
 	</body>
 </html>
