Experimenting with a bit of CSS. Also removing the database file properly from the latest commit, hopefully.

--- a/views/pages/addNewEntry.ejs
+++ b/views/pages/addNewEntry.ejs
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Database Entry Form</title>
+		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
 		<h1>Add a new item!</h1>
