--- a/views/pages/viewAll.ejs
+++ b/views/pages/viewAll.ejs
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Look at all of this data!</title>
+		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
 		<div>
