Added a confirmation page for database entry deletion.

--- a/views/pages/viewAll.ejs
+++ b/views/pages/viewAll.ejs
@@ -24,7 +24,7 @@
 					<td><em><%= item.desc %></em></td>
 					<td><%= item.price %></td>
 					<td><a href='/editEntry?id=<%= item.id %>' style='text-decoration:none; color:darkgreen'>Edit</a></td>
-					<td><a href='/deleteEntry?id=<%= item.id %>' style='text-decoration:none; color:darkorange'>Delete</a></td>
+					<td><a href='/confirmDelete?id=<%= item.id %>' style='text-decoration:none; color:darkorange'>Delete</a></td>
 					
 				</tr>
 
