Changed the navbar to be an included EJS file on all pages that need it.

--- a/views/pages/addNewEntry.ejs
+++ b/views/pages/addNewEntry.ejs
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
+		<%- include('../partials/navbar') %>
 		<h1>Add a new item!</h1>
 		<p>Please use the form below to enter item data.</p>
 		<form action="/addNewEntry" METHOD="POST"> <!--Takes the input data and tells the server to treat it acccordingly. -->
