--- a/views/pages/confirmDelete.ejs
+++ b/views/pages/confirmDelete.ejs
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
+		<%- include('../partials/navbar') %>
 		<h3>Are you sure you want to delete this item?</h3>
 		<table>
 			<tr>
