--- a/views/pages/viewAll.ejs
+++ b/views/pages/viewAll.ejs
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
+		<%- include('../partials/navbar') %>
 		<div>
 			<h1>Lost & Found</h1>
 		</div>
