Learned how to do basic user authentication! Will clean up everything ASAP.

--- a/views/pages/addNewEntry.ejs
+++ b/views/pages/addNewEntry.ejs
@@ -12,19 +12,19 @@
 		<form action="/addNewEntry" METHOD="POST"> <!--Takes the input data and tells the server to treat it acccordingly. -->
 
 		<strong>Item Name</strong>: 
-		<input type="text" name="name" style="border:1px solid gray">
+		<input type="text" name="name" style="border:1px solid gray" placeholder="Item Name">
 		<br>
 
 		<strong>Item Description</strong>: 
-		<input type="text" name="desc" style="border:1px solid gray">
+		<input type="text" name="desc" style="border:1px solid gray" placeholder="Item Description">
 		<br>
 
 		<strong>Item Price</strong>: 
-		<input type="number" name="price" min="0" style="border:1px solid gray">
+		<input type="number" name="price" min="0" style="border:1px solid gray" placeholder="Item Price">
 		<br>
 
 		<strong>Item Color</strong>: 
-		<input type="text" name="color" value="black" style="border:1px solid gray">
+		<input type="text" name="color" value="black" style="border:1px solid gray" placeholder="Item Color (Blank = Random!)">
 		<br>
 
 		<input type="submit" value="Submit New Entry" style="border:2px solid black">
