--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>Log in!</title>
-		<!--- CSS Link goes here -->
+		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
-		<h3 style="color:#88cccc"><strong>Please enter your information below.</strong></h3>
+		<h3><strong>Please enter your information below.</strong></h3>
 		<form action="/login" METHOD="POST">
-			<div style="display:inline-block; border:5px solid black; border-radius:5px; background-color:#dddddd; margin:3px; padding: 5px">
+			<div id="loginForm">
 				<label><strong>Username:</strong></label>
 				<input type="text" name="username" placeholder="Enter username here">
 				<br>
@@ -18,6 +18,6 @@
 			</div>
 		</form>
 		<br>
-		<p>Alternatively, <a href="/" style="text-decoration:none; color:orange">click here</a> to return to the index page!</p>
+		<p>Alternatively, <a href="/">click here</a> to return to the index page!</p>
 	</body>
 </html>
