--- a/views/pages/confirmDelete.ejs
+++ b/views/pages/confirmDelete.ejs
@@ -16,25 +16,25 @@
 				<th>Price</th>
 			</tr>
 			<tr>
-				<td><span style='color:<%= item.color %>'><%= item.id %></span></td>
-				<td><%= item.name %></td>
+				<td><%= item.id %></td>
+				<td class="itemName"><span style='color:<%= item.color %>'><%= item.name %></span></td>
 				<td><%= item.desc %></td>
 				<td><%= item.price %></td>
 			</tr>
 		</table>
 		<br>
-		<table>
-			<tr>
-				<td style='text-align:center'>
+		<div class="centered">
+			<div class="looksLikeTable">
+				<div class="buttonHolder">
 					<form action='/deleteEntry' METHOD='POST'>
 						<input type='hidden' name='id' value='<%= item.id %>' readonly>
-						<input type='submit' value='Click Here to Confirm Deletion' style='border:2px solid black'>
+						<input class="outlined" type='submit' value='Click Here to Confirm Deletion'>
 					</form>
-				</td>
-				<td>
-					<a href='/viewAll' style:'text-decoration:none'><button type='button' style='border:2px solid black'>Return to Lost & Found (Cancel)</button></a>
-				</td>
-			</tr>
-		</table>
+				</div>
+				<div class="buttonHolder">
+					<a href='/viewAll'><button class="outlined" type='button'>Return to Lost & Found (Cancel)</button></a>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
