--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,28 +3,23 @@
 <html>
 	<head>
 		<title>Index Page Title! Enthusiasm!</title>
-		<!-- <link rel="stylesheet" type="text/css" href="teststyle.css"> -->
+		<link rel="stylesheet" type="text/css" href="teststyle.css">
 	</head>
 	<body>
 		<%- include('../partials/navbar') %>
-		<% if(!fakeName) { %> <!-- Yes, I realize this is a bit of a flawed execution of the name entry. 
+		<% if(!user) { %> <!-- Yes, I realize this is a bit of a flawed execution of the name entry. 
 		It is just an example, though! -->
 		<h1>Greetings, random citizen!</h1>
-			<div style="background-color:black; color:white; border:2px solid orange; padding:5px; display:inline-block">
-				Want to be called something specific once? You're in luck!<br>
-				<form action="/" METHOD="POST">
-					<input type="text" name="fakeName" style="border:1px solid gray; background-color:white; color:black" placeholder="Enter your desired name here!"> 
-					<input type="submit" value="Submit" style="border:1px solid white; background-color:black; color:white">
-				</form>
-			</div>
+		<p>Please log in using the button in the top-right corner!</p>
 		<% }
 		else { %>
-			<h1>Welcome, <%= fakeName %>! <a href="/" style="text-decoration:none"><button type="button" style="border:2px solid orange; background-color:black; color:white; padding:3px; margin:10px">Log Out (sorta...)</button></a></h1>
+			<h1>Welcome, <%= user.name %>!</h1>
 		<% } %>
 		<hr>
 		<p>Currently, the following pages are undergoing testing:</p>
 		<ul>
-			<li><strong><a href="/viewAll" style="text-decoration:none; color:orange">Lost & Found</a></strong> - View and manage the items within the database!</li>
+			<li><strong><a href="/viewAll">Lost & Found</a></strong> - View and manage the items within the database!</li>
+			<li><strong><a href="/login">Login</a></strong> - Test user authentication!</li>
 		</ul>
 	</body>
 </html>
