Added a user registration mechanism/page.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,7 @@
 		<ul>
 			<li><strong><a href="/viewAll">Lost & Found</a></strong> - View and manage the items within the database!</li>
 			<li><strong><a href="/login">Login</a></strong> - Test user authentication!</li>
+			<li><strong><a href="/register">Register</a></strong> - Test the registration process!</li>
 		</ul>
 	</body>
 </html>
