--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,6 +12,9 @@
 		else { %>
 			<div class="loginButton">
 				<a href="/login">Log In</a>
+			</div> 
+			<div class="loginButton">
+				<a href="/register">Register</a>
 			</div>
 		<% } %>
 		</div>
