Cleaned up comments and made everything look a little nicer.

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -24,7 +24,7 @@
 			<p>Alternatively, <a href="/">click here</a> to return to the index page!</p>
 		<% } 
 		else { %>
-			<h3><strong>You are already logged in!</strong></h3>
+			<h3><strong>You are already logged in.</strong></h3>
 			<br>
 			<p><a href="/">Click here</a> to return to the index page.</p>
 		<% } %>
