--- a/views/teststyle.css
+++ b/views/teststyle.css
@@ -71,6 +71,10 @@
 	text-align:center;
 }
 
+.shadowed {
+	text-shadow:1px 1px 1px black;
+}
+
 .failed {
 	border: 1px dotted red;
 	display:inline-block;
