Hashed/salted passwords in the database using crypto. :)

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,8 +7,7 @@
 	</head>
 	<body>
 		<%- include('../partials/navbar') %>
-		<% if(!user) { %> <!-- Yes, I realize this is a bit of a flawed execution of the name entry. 
-		It is just an example, though! -->
+		<% if(!user) { %> 
 		<h1>Greetings, random citizen!</h1>
 		<p>Please log in using the button in the top-right corner!</p>
 		<% }
